# LGL-Ingest

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.supervisor  README.md  docker-compose.yml
.sqlx/: query-24d63bc7ce116a839b1062bf23ceb011e7ab64c6cd51131022d3c6ff055b7c6f.json  query-276678cf40574e0ac0c4e3da62b1bdb261e2d323fad49b1fe3776fb318aa1877.json  query-3b1a3df1f11fc0e706f842006c9d5a9e15ea1d984d48e1fac23511f3fb7b5cbf.json  query-3be15d9a0dc92f1367d2f6d33644a289e9eb9357158968d44e319204ff9e5032.json  query-42b9831d29525aa1747fd1b2ec83ff09fa256a4cccd6b1be5cac43fee42bb564.json  query-4e8f70faf4ec38631694b439d58c30386997b4889994c63ee01fafe37f28338c.json  query-5d8bf67a366fb04ade18d2bf0a42cc824a23829c51890fb0b4e13599ee7a44a6.json  query-66876a1ed5390eb61802d150d730a54a4a7990920a6b677c068697966889b56a.json  query-6a1eef875c049f67161b0d78a9ebf64b4fa3c6c47ad03a78bd6cedca88dbc098.json  query-7a5064efc0e91942c19b062189ff14f25636fba734c36f3deb56f83563b33caa.json  query-83fbee016c7fc1bdde5218684ef2a8c5cec4993b807db2530971a5a38a8b5307.json  query-8678f49d3c68024e8364265ec9e702e85326d188ec132a7484085c4e5a39d080.json  query-86d41842d91510a252629011cda510d9b4e417691c7a0695c7b44a6390ec5424.json  query-8cdfe8de9bc8146b62ed16f1e03e79b7248529e4d3f6598e880a4d63bb431213.json  query-8d292f52671d369c43f06f09b89c778bce51793c206e59b23a30cb1c91f4004e.json  query-8e3114110066c56d40ad2fcc75af7fb3fd82d135807b7ed682608a343e2f30bd.json  (+20 more)
config/: ingest.example.toml
frontend/: index.html  (+1 more)
ingest-sync/: Cargo.toml
ingest-sync/src/: config.rs  coordinator.rs  main.rs  pcr.rs  stream.rs
(+70 files in other folders)
