[package]
name = "ingest-sync"
version = "0.1.0"
edition = "2021"
description = "LGL Ingest — multi-camera sync coordinator"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "io-util"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
bytes = "1"
